--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <a href="https://www.linkedin.com/in/lakkojueswarasai/"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/Eswarsai69"><i class="fa-brands fa-github"></i></a>
                     </div>
-                    <a href="https://drive.google.com/file/d/1Cf5D7NdxNWwcKka4Z5APVBWLy9HARNHq/view" download class="btn btn2">Download Resume</a>
+                    <a href="https://drive.google.com/file/d/1O0WjQcnjEyt0t8LuqivFQemee822XLLJ/view?usp=sharing" download class="btn btn2">Download Resume</a>
                 </div>
                 <div class="contact-right">
                     <form>
